# football-pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/workflows/: ci_tests.yaml  run_raw_layer.yaml
configs/: 001_raw_layer.yaml
data/00_raw/element_types/: 250310_020232.parquet  250311_022044.parquet  250312_021950.parquet  250313_022150.parquet  250314_021948.parquet  250315_021813.parquet  250316_022534.parquet  250317_022331.parquet  250318_022304.parquet  250319_022155.parquet  250320_022059.parquet  250321_022238.parquet  250322_021936.parquet  250323_022810.parquet  250324_022702.parquet  250325_022352.parquet  250326_022246.parquet  250327_022246.parquet  250328_022437.parquet  250329_022122.parquet  250330_023725.parquet  250331_023616.parquet  250401_024306.parquet  250402_022516.parquet  250403_022354.parquet  250404_022353.parquet  250405_022149.parquet  250406_022813.parquet  250407_022743.parquet  250408_022433.parquet  250409_022551.parquet  250410_022443.parquet  250411_022518.parquet  250412_022227.parquet  250413_034159.parquet  250414_023649.parquet  250415_022834.parquet  250416_022737.parquet  (+151 more)
docs/: dev_README.md  dev_feature.md  schemas.md
src/football_pipeline/: __init__.py  data_structures.py  io.py  logger.py  pipe_001_raw.py  temp.py  transform.py  utils.py
tests/: conftest.py  test_io.py  test_main.py  test_transform.py  test_utils.py
tests/adapters/: test_apis.py  test_time.py
tests/domain/: test_transform.py
tests/stages/: test_pipe_001_raw.py
(+577 files in other folders)
