[project]
name = "football-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "spencerduberry", email = "spencerduberry@hotmail.co.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.1.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
football-pipeline = "football_pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.2.1",
    "hypothesis>=6.127.9",
    "ipykernel>=6.29.5",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
]
